# p2p-networking

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: abstract_classes.py  broadcast_discovery.py  events.py  main.py  messages.py  node.py  tcp_transport.py
src/p2p_networking/: __init__.py  abstract_classes.py  broadcast_discovery.py  config.ini.example  events.py  main.py  net.py  node.py  tcp_transport.py  utils.py
web/: index.html
